// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clicking the left and right button inside the header should call the right handler 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header"
  >
    <button
      class="button left"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus icon"
      />
    </button>
    <div
      class="label"
    >
      I have handler
    </div>
    <button
      class="button right"
      type="button"
    >
      <span
        aria-label="fa-gear"
        class="fa fa-gear icon"
      />
    </button>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render a button on the right with options and a value 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header"
  >
    <div
      class="label"
    />
    <button
      class="button right hasLabel hasOptions"
      type="button"
    >
      <span
        class="label"
      >
        Test
      </span>
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render a button on the right with options including icons and a value 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header"
  >
    <div
      class="label"
    />
    <button
      class="button right hasLabel hasOptions"
      type="button"
    >
      <span
        class="label"
      >
        Test
      </span>
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render a disabled MultiItemSelection with children 1`] = `
<div
  class="multiItemSelectionClass disabled"
>
  <div
    class="header"
  >
    <div
      class="label"
    >
      I am disabled
    </div>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render a not sortable MultiItemSelection with children 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header"
  >
    <div
      class="label"
    >
      I have children
    </div>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render an MultiItemSelection while loading 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header emptyList"
  >
    <div
      class="label"
    >
      I am loading
      <div
        class="loader"
      >
        <div
          class="spinner"
          style="width:24px;height:24px"
        >
          <div
            class="doubleBounce1"
          />
          <div
            class="doubleBounce2"
          />
        </div>
      </div>
    </div>
  </div>
  <ul
    class="list"
  />
</div>
`;

exports[`Render an MultiItemSelection with children 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header"
  >
    <div
      class="label"
    >
      I have children
    </div>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item disabled"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3 (disabled)
        </div>
        <div
          class="buttons"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render an empty MultiItemSelection 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header emptyList"
  >
    <div
      class="label"
    >
      I am empty
    </div>
  </div>
  <ul
    class="list"
  />
</div>
`;
